--- a/views/user-sign-up.ejs
+++ b/views/user-sign-up.ejs
@@ -5,7 +5,7 @@
       <div class="sign-up" id="sign-up">
         <div class="overlay-icon">
           <svg>
-            <use xlink:href="image/sprite.svg#icon-instagram"></use>
+            <use xlink:href="/image/sprite.svg#icon-instagram"></use>
           </svg>
         </div>
         <div class="overlay-heading">Hello, Friend!</div>
@@ -63,7 +63,7 @@
           <input
             type="password"
             class="input"
-            placeholder="Password"
+            placeholder="Password atleast 6 characters"
             name="password"
             required
           />
