--- a/views/post.ejs
+++ b/views/post.ejs
@@ -70,7 +70,7 @@
         </a>
       </div>
       <p class="post-stats-count">
-        <span class="popup-stats-unit"><%=post.likes.length%></span> likes
+        <span class="post-stats-unit"><%=post.likes.length%></span> likes
       </p>
     </div>
     <%if(locals.user){%>
